# SpeechLLMOrchestrator

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/speech_llm_orchestrator/: api.py  config.py
src/speech_llm_orchestrator/clients/: llm_client.py  speech_client.py
src/speech_llm_orchestrator/models/: schemas.py
