[project]
name = "speech-llm-orchestrator"
version = "0.1.0"
description = "Orchestrator API that combines speech-to-text and LLM services"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "python-multipart",
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.uv]
package = true
